[package]
name = "cnctd_npm"
version = "0.1.1"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "NPM Methods"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_npm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
cnctd_shell = { version = "0.1.1", path = "../cnctd_shell" }
